--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
 
 <body style="background:#eeedf3;display: grid;">
 
+	<div class  = "contentwrap"> 
 	<div class = "wrapper" id = "profileinfo">
 		<div class = "profile">
 			<div class = "username">Your Log</div>
@@ -19,6 +20,7 @@
 		<div class = profilepic>
 			<img class = "logo" src="matthew.png" width = "100px">
 		</div>
+	</div>
 	</div>
 
 	<div class = contentwrap>
