--- a/profile.html
+++ b/profile.html
@@ -27,6 +27,16 @@
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
+		<br>
+		<br>
+		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		
+		<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
+
+		<div class = "avatar">
+			<img class="logo" src="1.png" width = "200px">
+		</div>
+
 		<div class="multi-selector">
 
 			<div class="select-field">
@@ -73,12 +83,6 @@
 			});
 	   
 			</script>
-		
-		<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
-
-		<div class = "avatar">
-			<img class="logo" src="1.png" width = "200px">
-		</div>
 	</div>
 
 	
