--- a/profile.html
+++ b/profile.html
@@ -86,6 +86,7 @@
 	</div>
 
 	
+	<div class = "contentwrap">
 	<div class = "wrapper" id = "goals">
 
         <label class = "title">Log History</label>
@@ -99,6 +100,8 @@
 	</div>
 </div>
 
+
+</div>
 
 
 	<div class = "contentwrap">
