--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
 	</div>
 </div>
 
-<div class = "contentwrap">
+<div class = "contentwrap" id = "tab2">
 	<div class = "wrapper" id = "goals">
 
         <label class = "title">Log History</label>
@@ -98,7 +98,7 @@
 	</div>
 
 	</div>
-	
+
 </div>
 
 
