--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup">
+	<div class = "wrapper" id = "physical-checkup">
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
