--- a/profile.html
+++ b/profile.html
@@ -13,13 +13,16 @@
 
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
+
 		<div class = "profile">
 			<div class = "username">Your Log</div>
 		</div>
+
 	</div>
 
 		<div class = profilepic>
 			<img class = "logo" src="matthew.png" width = "100px">
+		</div>
 	</div>
 
 	<div class = contentwrap>
