--- a/profile.html
+++ b/profile.html
@@ -81,6 +81,16 @@
     </div>
           </div>
 
+    <script>
+
+     document.querySelector('.select-field').addEventListener('click',()=>{
+         document.querySelector('.list').classList.toggle('show');
+         
+
+     });
+
+	 </script>
+
 
 	<div class = "wrapper" id = "insights">
 	<label class = "title" width = 100%>Key Insights</label>
