--- a/profile.html
+++ b/profile.html
@@ -74,6 +74,21 @@
        <label id="5" class="task" onclick = "select(this.id);">
             11/18/21 - Reported difficulty focusing
      </label>
+	 <label id="5" class="task" onclick = "select(this.id);">
+		11/18/21 - Reported difficulty focusing
+ </label>
+ <label id="5" class="task" onclick = "select(this.id);">
+	11/18/21 - Reported difficulty focusing
+</label>
+<label id="5" class="task" onclick = "select(this.id);">
+	11/18/21 - Reported difficulty focusing
+</label>
+<label id="5" class="task" onclick = "select(this.id);">
+	11/18/21 - Reported difficulty focusing
+</label>
+<label id="5" class="task" onclick = "select(this.id);">
+	11/18/21 - Reported difficulty focusing
+</label>
 	 
      </div>
 	 
@@ -81,15 +96,7 @@
     </div>
           </div>
 
-    <script>
 
-     document.querySelector('.select-field').addEventListener('click',()=>{
-         document.querySelector('.list').classList.toggle('show');
-         
-
-     });
-
-	 </script>
 
 
 	<div class = "wrapper" id = "insights">
