--- a/insight.html
+++ b/insight.html
@@ -66,7 +66,7 @@
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
-			<div class="button" onclick = "location.href='checkup.html';">
+			<div class="button" onclick = "location.href='import/physical-checkup.html';">
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
