--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
 
