--- a/profile.html
+++ b/profile.html
@@ -93,7 +93,7 @@
 	<div class = "contentwrap" id = tab2>
 	<div class = "wrapper" id = "goals">
 
-        <label class = "title">Log History</label>
+        <label class = "title">Entry Information</label>
             <div class= "multi-selector">
 
    	 
