--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
 		<br>
 		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 
-		<div class= "multi-selector">
+		<div class= "multi-selector" top:-20px>
 		<div class = "select-field">
 			<input type = "text" name ="" placeholder= "Click on a date to see your entries" id = "" class = "input-selector">
 				 </div>
