--- a/profile.html
+++ b/profile.html
@@ -32,12 +32,12 @@
 		<br>
 		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 
-		<div class= "multi-selector" top:-20px>
+		<div class= "multi-selector">
 		<div class = "select-field">
 			<input type = "text" name ="" placeholder= "Click on a date to see your entries" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 200px; ">
+				 <div class = "list" style = "overflow-y:scroll;height: 250px; ">
 				   <label class = "title"></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);">
