--- a/profile.html
+++ b/profile.html
@@ -30,12 +30,9 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		<label class = "summary" >Add and review entries of your symptoms <br> to gain new insights from your log</label>
 
 		<div class= "multi-selector">
-		<div class = "select-field">
-			<input type = "text" name ="" placeholder= "Click on a date to see your entries" id = "" class = "input-selector">
-				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 350px; ">
 				   <label class = "title"></label>
