--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "summary" >Add and review entries of your symptoms <br> to gain new insights from your log</label>
+		<label class = "summary" >Add and review entries of your symptoms <br> to gain new insights from your log <br><br></label>
 
 		<div class= "multi-selector">
 			<!---------List of checkboxes and options----------->
