--- a/profile.html
+++ b/profile.html
@@ -30,9 +30,14 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "summary" >Add and review entries of your symptoms <br> to gain new insights from your log <br><br></label>
+		<label class = "text">Add and review entries of your <br> symptoms to gain new insights from your log</label>
+		<br> 
+		<br>
 
 		<div class= "multi-selector">
+		<div class = "select-field">
+			<input type = "text" name ="" placeholder= "Click on a date to see your entries" id = "" class = "input-selector">
+				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 350px; ">
 				   <label class = "title"></label>
