--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "text">Add and review entries of your <br> symptoms to gain new insights from your log</label>
+		<label class = "class">Add and review entries of your <br> symptoms to gain new insights from your log</label>
 		<br> 
 		<br>
 
