--- a/profile.html
+++ b/profile.html
@@ -30,9 +30,9 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "class">Add and review entries of your <br> symptoms to gain new insights from your log</label>
+		<label class = "profilename">Add and review entries of your <br> symptoms to gain new insights from your log</label>
 		<br> 
-		<br>
+		<br> 
 
 		<div class= "multi-selector">
 		<div class = "select-field">
