--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "profilename">Add and review entries of your symptoms to gain new <br> insights from your log</label>
+		<label class = "profilename">Add and review entries of your symptoms to gain new insights from your log</label>
 		<br> 
 		<br> 
 
