--- a/profile.html
+++ b/profile.html
@@ -101,7 +101,7 @@
         </div>
 
 		<div class = "wrapper" id = "insights">
-			<label class = "title" width = 100%>Key Insights</label>
+			<label class = "title">Key Insights</label>
 		</div>
 	</div>
 </div>
