--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
-                     <input type="submit" value="Sign up" onclick="location.href = 'proceed()'">
+                     <input type="submit" value="Sign up" onclick="proceed()">
                   </div>
                </form>
             </div>
