--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
             
             function proceed(){
                if(email.value!="" &&pass1.value!="" ){
-                  window.location.href='profileinfo.html';
+                  window.location.href="homepage.html";
                }
             }
             
