--- a/profileinfo.html
+++ b/profileinfo.html
@@ -292,6 +292,28 @@ Shortness of Breath
           </div>
           <div class = "writeup">
             <label class = "title">Add Contacts</label>
+              <label class = "summary">You can add your doctors information to send them reports through the app</label>
+               <div class = "form-container">
+                    <div class="form-inner">
+                        <form action="#" class="signup">
+                            <label class ="summary">Doctor name</label>
+                                <br>
+                            <div class="field">
+                                 <input type="text" placeholder="Full Name">
+                            </div>
+                            <label class ="summary">Doctor email</label>
+                                <br>
+                            <div class="field">
+                                 <input type="text" placeholder="email@email.com">
+                            </div>
+                            <label class ="summary">Doctor Phone number</label>
+                                <br>
+                            <div class="field">
+                                 <input type="number" placeholder="+1204234567">
+                            </div>
+                        </form>
+                     </div>
+              </div>
               <a class="gradient-button gradient-button-2" href ="homepage.html">Proceed</a><br />
           </div>
         </div>
