--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,8 @@
 		<div class = "wrapper" id = "goals">
         	<label class = "title">Entry Information</label>
 				<div class="symptom-text">[testing] fatigue</div>
-
+          			<div data-w-id="af6167be-5254-15ec-caa1-b2824f26b362" class="scale-submit">
+				</div>
         </div>
 
 		<div class = "wrapper" id = "insights">
