--- a/login.html
+++ b/login.html
@@ -70,6 +70,7 @@
             function proceed(){
                if(email.value!="" &&pass1.value!="" ){
                   window.location.href="homepage.html";
+                  console.log("Here");
                }
             }
             
