--- a/profile.html
+++ b/profile.html
@@ -101,10 +101,12 @@
 				<div class="symptom-text">[testing] fatigue</div>
           			
         </div>
+	</div>
+</div>
 
-		<div class = "wrapper" id = "insights">
-			<label class = "title">Key Insights</label>
-		</div>
+<div class = "contentwrap" id = tab2>
+	<div class = "wrapper" id = "insights">
+		<label class = "title">Key Insights</label>
 	</div>
 </div>
 
