--- a/profileinfo.html
+++ b/profileinfo.html
@@ -411,7 +411,7 @@ Shortness of Breath
     l2.className ="";
     l3.className="";
   }
-    function refresh{
+    function refresh(){
                    docname.value = "";
                    docem.value = "";
                    docnum.value = "";
