--- a/profileinfo.html
+++ b/profileinfo.html
@@ -306,7 +306,7 @@ Shortness of Breath
                                 <label class = "summary">Doctor Email</label>
                             </div>
                             <div class="field">
-                                 <input type="text" placeholder="email@email.com"id = "docem>
+                                 <input type="text" placeholder="email@email.com"id = "docem">
                             </div>
                             <div class = "fieldname">
                                  <label class = "summary">Doctor Phone Number</label>
@@ -323,7 +323,7 @@ Shortness of Breath
         </div>
     </div>
     <script>
-     var ilnesses  = ["Allergies","Anxiety","Athritis","Asthma","E","F"];
+     var ilnesses  = ["Allergies","Anxiety","Athritis","Asthma","Binge Eating","Breast Cancer","Bulimia","Chest Pain"];
      var myilnesses = [];
      document.querySelector('.select-field').addEventListener('click',()=>{
          document.querySelector('.list').classList.toggle('show');
