--- a/profileinfo.html
+++ b/profileinfo.html
@@ -306,7 +306,7 @@ Shortness of Breath
                                 <label class = "summary">Doctor Email</label>
                             </div>
                             <div class="field">
-                                 <input type="text" placeholder="email@email.com"id = "docem">
+                                 <input type="text" placeholder="email@email.com"id = "docem" style="width:100%;">
                             </div>
                             <div class = "fieldname">
                                  <label class = "summary">Doctor Phone Number</label>
@@ -314,11 +314,11 @@ Shortness of Breath
                             <div class="field">
                                  <input type="number" placeholder="+1204234567" id ="docnum">
                             </div>
-                             <a onclick = "refresh()">Add another contact </a>
+                             <a onclick = "refresh()" >Add another contact </a>
                         </form>
                      </div>
               </div>
-              <a class="gradient-button gradient-button-2" href ="homepage.html">Proceed</a><br />
+              <a class="gradient-button gradient-button-2" href ="homepage.html" style = "width:100%;">Proceed</a><br />
           </div>
         </div>
     </div>
