--- a/profileinfo.html
+++ b/profileinfo.html
@@ -308,7 +308,7 @@ Shortness of Breath
                             <div class="field">
                                  <input type="text" placeholder="email@email.com"id = "docem" style="width:100%;">
                             </div>
-                            <div class = "fieldname">
+                            <div class = "fieldname" style = "width:250px;">
                                  <label class = "summary">Doctor Phone Number</label>
                              </div>   
                             <div class="field">
