--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" id = "insights">
+		<div class = "wrapper" up = "20px" id = "insights">
 			<label class = "title">Key Insights</label>
 		</div>
 
