--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" up = "20px" id = "insights">
+		<div class = "wrapper" id = "insights">
 			<label class = "title">Key Insights</label>
 		</div>
 
@@ -132,6 +132,10 @@
 			</div>
 		</div>
 	</div>
+
+	<script>
+		$('#insights').css({marginTop: '-=50px'});
+	</script>
 
 </body>
 </html>
