--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" id = "insights">
+		<div class = "wrapper" id = "key insights">
 			<label class = "title">Key Insights</label>
 		</div>
 
@@ -134,7 +134,7 @@
 	</div>
 
 	<script>
-		$('#insights').css({marginTop: '-=100px'});
+		$('#key insights').css({marginTop: '-=100px'});
 	</script>
 
 </body>
