--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" id = "key insights">
+		<div class = "wrapper" id = "insights">
 			<label class = "title">Key Insights</label>
 		</div>
 
@@ -132,10 +132,5 @@
 			</div>
 		</div>
 	</div>
-
-	<script>
-		$('#key insights').css({marginTop: '-=200px'});
-	</script>
-
 </body>
 </html>
