--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,7 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<div class = "wrapper" id = "goals">
+		<div class = "wrapper" id = "goals" top = "-20px">
         	<label class = "title">Entry Information</label>
         </div>
 
