--- a/profile.html
+++ b/profile.html
@@ -96,11 +96,11 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<div class = "wrapper" id = "goals" top = "-20px">
+		<div class = "wrapper" id = "goals">
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" id = "insights">
+		<div class = "wrapper" top = "-20px" id = "insights">
 			<label class = "title">Key Insights</label>
 		</div>
 
