--- a/profile.html
+++ b/profile.html
@@ -100,10 +100,9 @@
         	<label class = "title">Entry Information</label>
         </div>
 
-		<div class = "wrapper" top = "-20px" id = "insights">
+		<div class = "wrapper" id = "insights">
 			<label class = "title">Key Insights</label>
 		</div>
-
 	</div>
 </div>
 
