--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);">
+				   <label id = "1" class = "symptom-text" onclick = "select(this.id);">
 					11/01/21 - Reported headaches 
 				</label>
 			
