--- a/profile.html
+++ b/profile.html
@@ -59,26 +59,26 @@
 				 </label>
 			
 				   <label id = "5" class = "task" onclick = "select(this.id);">
-						11/18/21 - Reported difficulty focusing
+						11/18/21 - Reported depressive symptoms
 				 </label>
 			
-				 <label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+				 <label id = "6" class = "task" onclick = "select(this.id);">
+					11/18/21 - Reported weakness
 				 </label>
 			
-				 <label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+				 <label id = "7" class = "task" onclick = "select(this.id);">
+					11/18/21 - Reported flu symptoms
 				</label>
 			
-				<label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+				<label id = "8" class = "task" onclick = "select(this.id);">
+					11/18/21 - Reported difficulty breathing
 				</label>
 			
-				<label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+				<label id = "9" class = "task" onclick = "select(this.id);">
+					11/18/21 - Reported symptoms of anxiety
 				</label>
 			
-				<label id = "5" class = "task" onclick = "select(this.id);">
+				<label id = "10" class = "task" onclick = "select(this.id);">
 					11/18/21 - Reported difficulty focusing
 				</label>
 				 
