--- a/profile.html
+++ b/profile.html
@@ -143,24 +143,9 @@
    
 		});
 		
-		 var slider = document.getElementById("myslide");
-		 var list = document.getElementById("mylist");
-		 var m1 = document.getElementById("m-1");
-		  var docname = document.getElementById("docname");
-		  var docem = document.getElementById("docem");
-		  var docnum = document.getElementById("docnum");
-		 var aplus = document.getElementById("a+");
-		 var age = document.getElementById("Age");
-		 var name = document.getElementById("name");
-		 var height = document.getElementById("height");
-		 var weight = document.getElementById("Age");
-		 var aminus = document.getElementById("a-");
-		 var f1 = document.getElementById("f-1");
-		 var o1 = document.getElementById("o-1");
-		 var l1 = document.getElementById("l-1");
-		 var l2 = document.getElementById("l-2");
-		 var l3 = document.getElementById("l-3");
-		 var cond = false;
+		
+		 var selected = false;
+		 var id = 0;
 
 
 	   function refresh(){
@@ -174,22 +159,16 @@
 
 			  if(item.className == "task" && !cond)
 			  {
-				  cond = true;
+				  id = val;
+				  selected = true;
 
 				   item.className = "selected";
 				   myilnesses.push(ilnesses[val])
-				   list.innerHTML= "";
-
-				   for (a in myilnesses)
-				   {
-					 list.innerHTML += myilnesses[a] + "<br>";
-				   }
-				  
 			  }
 			  
 			  else
 			  {
-				  cond = false;
+				  selected = false;
 
 				  item.className = "task";
 
@@ -199,15 +178,14 @@
 				  }
 
 				  myilnesses.splice(a,1);
-
-
-				  list.innerHTML= "";
-
-				   for (a in myilnesses)
-				   {
-					 list.innerHTML += myilnesses[a] + "<br>";
-				   }
 			  }
+
+			  list.innerHTML= "";
+
+			   for (a in myilnesses)
+				{
+					list.innerHTML += myilnesses[a] + "<br>";
+				}
 	 }
 
 	   </script>
