--- a/profile.html
+++ b/profile.html
@@ -143,8 +143,25 @@
 		});
 		
 		
-		 var selected = false;
-		 var id = 0;
+		var slider = document.getElementById("myslide");
+      	var list = document.getElementById("mylist");
+      	var m1 = document.getElementById("m-1");
+       	var docname = document.getElementById("docname");
+       	var docem = document.getElementById("docem");
+       	var docnum = document.getElementById("docnum");
+      	var aplus = document.getElementById("a+");
+      	var age = document.getElementById("Age");
+      	var name = document.getElementById("name");
+      	var height = document.getElementById("height");
+      	var weight = document.getElementById("Age");
+      	var aminus = document.getElementById("a-");
+      	var f1 = document.getElementById("f-1");
+      	var o1 = document.getElementById("o-1");
+      	var l1 = document.getElementById("l-1");
+      	var l2 = document.getElementById("l-2");
+      	var l3 = document.getElementById("l-3");
+		var selected = false;
+		var id = 0;
 
 
 	   function refresh(){
@@ -164,14 +181,6 @@
 
 				item.className = "selected";
 				myilnesses.push(ilnesses[val])
-
-
-				list.innerHTML= "";
-
-				for (a in myilnesses)
-				{
-					list.innerHTML += myilnesses[a] + "<br>";
-				}
 			}
 			  
 			else
@@ -189,14 +198,14 @@
 				}
 
 				myilnesses.splice(a,1);
+			}
 
 
-				list.innerHTML= "";
+			list.innerHTML= "";
 
-				for (a in myilnesses)
-				{
-					list.innerHTML += myilnesses[a] + "<br>";
-				}
+			for (a in myilnesses)
+			{
+				list.innerHTML += myilnesses[a] + "<br>";
 			}
 	 }
 
