--- a/profile.html
+++ b/profile.html
@@ -164,10 +164,11 @@
 				selected = true;
 
 				item.className = "selected";
+
 				myilnesses.push(ilnesses[val])
 			}
 			  
-			else if(item.className == "task" && id == val)
+			else if(item.className == "selected")
 			{
 				selected = false;
 
