--- a/profile.html
+++ b/profile.html
@@ -171,6 +171,7 @@
 			else
 			{
 				document.getElementById(id).className = "task";
+				myilnesses.push(ilnesses[val])
 
 				selected = false;
 
