--- a/profile.html
+++ b/profile.html
@@ -171,6 +171,9 @@
 			else
 			{
 				document.getElementById(id).className = "task";
+
+				item.className = "selected";
+
 				myilnesses.push(ilnesses[val])
 
 				selected = false;
