--- a/profile.html
+++ b/profile.html
@@ -160,6 +160,11 @@
 
 			if(item.className == "task" && !selected)
 			{
+				if(id != 0)
+				{
+					document.getElementById(id).className = "task";
+				}
+
 				id = val;
 				selected = true;
 
@@ -184,7 +189,7 @@
 					myilnesses.push(ilnesses[val])
 				}
 				
-				
+				selected = false;
 
 
 				for( a in myilnesses)
