--- a/profile.html
+++ b/profile.html
@@ -182,6 +182,8 @@
 
 				else
 				{
+					id = val;
+					
 					document.getElementById(id).className = "task";
 
 					item.className = "selected";
