--- a/profile.html
+++ b/profile.html
@@ -160,7 +160,7 @@
 
 			if(item.className == "task" && !selected)
 			{
-				if(id != 0)
+				if(id != 0 || id == val)
 				{
 					document.getElementById(id).className = "task";
 				}
