--- a/profile.html
+++ b/profile.html
@@ -158,7 +158,7 @@
 	   {
 			var item = document.getElementById(val);
 
-			if(item.className == "task" && !selected)
+			if(!selected)
 			{
 				if(id != 0)
 				{
@@ -179,7 +179,7 @@
 					item.className = "selected";
 				}
 
-				
+
 				myilnesses.push(ilnesses[val])
 			}
 			  
