--- a/profile.html
+++ b/profile.html
@@ -159,7 +159,13 @@
 			var item = document.getElementById(val);
 
 			if(!selected)
-			{				
+			{
+				if(id != 0)
+				{
+					document.getElementById(id).className = "task";
+				}
+
+				
 				id = val;
 				selected = true;
 
@@ -172,6 +178,7 @@
 			{
 				if(val == id)
 				{
+					id = 0;
 					selected = false;
 
 					item.clasName = "task";
