--- a/profile.html
+++ b/profile.html
@@ -152,7 +152,7 @@
 		var selectedID = 0;
 
 
-		$(".paragraph").click(function(event) {
+		$(".1").click(function(event) {
     	$('.entry-information').text($(this).attr('description'));
 		})
 
